<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/simpleNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bigTextStyleNotification"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/bigTextStyleNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bigtextstyle_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bigPicturesStyleNotification"
        app:layout_constraintTop_toBottomOf="@+id/simpleNotification"/>

    <Button
        android:id="@+id/bigPicturesStyleNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bigpicturesstylen_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/inboxStyleNotification"
        app:layout_constraintTop_toBottomOf="@+id/bigTextStyleNotification"/>

    <Button
        android:id="@+id/inboxStyleNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inboxstyle_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/actionNotification"
        app:layout_constraintTop_toBottomOf="@+id/bigPicturesStyleNotification"/>

    <Button
        android:id="@+id/actionNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inboxStyleNotification"/>
</androidx.constraintlayout.widget.ConstraintLayout>